fix radio button on ios

--- a/src/index.scss
+++ b/src/index.scss
@@ -73,7 +73,7 @@ body {
 }
 
 input[type='radio'] {
-  $size: 13px;
+  $size: 16px;
   $border-width: 1px;
   $checked-color: rgb(222 222 222);
 
@@ -94,9 +94,9 @@ input[type='radio'] {
   }
 
   +label[for] {
-    bottom: 4px;
+    bottom: 2px;
     cursor: pointer;
-    padding-left: 5px;
+    padding-left: 7px;
     position: relative;
   }
 
